# Owl

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-windows.txt  sample-config.yaml  sample-env.env  summarize.py  test.py
.config/: sample-config.yaml  sample-env.env
.github/workflows/: docker-image.yml
alembic/: env.py  script.py.mako
alembic/versions/: 33bddba74d25_add_suggested_links.py  9f91a67f25f2_add_capture_images.py  b6aff0a993d7_add_person_and_voicesamples.py  cc799b49fec7_initial_migration.py
clients/android/: README.md  settings.gradle
clients/ios/: Owl-Watch-App-Info.plist  UntitledAI-Watch-App-Info.plist
clients/web/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  server.js
clients/xiao-esp32s3-sense/firmware/lib/espressif_esp_audio_codec_1.0.1/: CMakeLists.txt  LICENSE  README.md  idf_component.yml
clients/xiao-esp32s3-sense/firmware/lib/espressif_esp_audio_codec_1.0.1/include/: esp_aac_enc.h  esp_adpcm_enc.h  esp_amrnb_enc.h  esp_amrwb_enc.h  esp_audio_codec_version.h  esp_audio_def.h  esp_audio_enc.h  esp_audio_enc_def.h  esp_g711_enc.h  esp_opus_enc.h  esp_pcm_enc.h
docs/: apple_watch_setup.md  configuration-options.md  development-boards.md  development_boards.md  docker_setup.md  environment-variables.md  getting-started.md  ios_instructions.md  macos_and_linux_setup.md  server-configuration.md  server_configuration.md  sony_spresense_setup.md  windows_setup.md  xiao_esp32s3_sense_setup.md
docs/clients/: apple-watch.md  ios.md  xiao-esp32s3-sense.md
docs/installation/: docker.md  macos-and-linux.md  windows.md
owl/: __init__.py  sample_config.yaml
owl/core/: cli.py  config.py
owl/database/: crud.py  database.py
owl/devices/: __init__.py  device_type.py
owl/files/: __init__.py  capture_directory.py  realtime_audio_converter.py
owl/models/: bing.py  schemas.py
owl/prompts/: __init__.py  suggestion.py  summarization.py
owl/server/: __init__.py  app_state.py  capture_socket.py  main.py  networking.py  streaming_capture_handler.py  tunneling.py
owl/services/: __init__.py
tests/: test_config.py  test_llm_service.py  test_whisper_transcription_service.py
tests/utils/: test_environment.py  test_setup.py
untitledai/: config.yaml  sample_config.yaml
untitledai/core/: cli.py  config.py
untitledai/database/: crud.py  database.py
untitledai/devices/: device_type.py
untitledai/files/: __init__.py  aac_frame_sequencer.py  capture_directory.py  capture_file.py  capture_files.py  capture_session_file.py  wav_file.py
untitledai/models/: datetime_serialization.py  schemas.py
untitledai/prompts/: __init__.py  summarization.py
(+186 files in other folders)
