[tool.poetry]
name = "owl"
version = "0.1.0"
description = ""
authors = ["Bart Trzynadlowski <bart.trzy@gmail.com>", "Ethan Sutin <ethan@sutin.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydub = "^0.25.1"
speechbrain = "^0.5.16"
pandas = "^2.1.4"
transformers = "^4.36.2"
nltk = "^3.8.1"
huggingface-hub = ">=0.13"
tokenizers = ">=0.13,<0.16"
onnxruntime = ">=1.14,<2"
torch = ">=2"
torchaudio = ">=2"
pyannote-audio = "3.1.1"
pydantic = "^2.5.3"
click = "^8.1.7"
torchvision = "^0.16.2"
litellm = "^1.17.4"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
asyncio = "^3.4.3"
python-socketio = "^5.11.0"
pydantic-yaml = "^1.2.0"
sqlmodel = "^0.0.14"
deepgram-sdk = "^3.1.0"
python-multipart = "^0.0.6"
webrtcvad = "^2.0.10"
pyaudio = "^0.2.14"
halo = "^0.0.31"
alembic = "^1.13.1"
faster-whisper = "^1.0.0"
whisperx = {git = "https://github.com/m-bain/whisperx.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"

[tool.poetry.scripts]
owl = "owl.core.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"